--- a/package.json
+++ b/package.json
@@ -12,12 +12,46 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "awe-dnd": "^0.3.0",
+    "axios": "^0.16.2",
+    "bcrypt": "^1.0.2",
+    "cheerio": "^1.0.0-rc.2",
+    "cheerio-advanced-selectors": "^1.1.1",
+    "cloudinary": "^1.9.0",
     "cross-env": "^5.0.0",
+    "crypto": "^0.0.3",
+    "firebase": "^4.1.2",
+    "firebase-admin": "^5.0.0",
+    "glob": "^7.1.2",
+    "graphql": "^0.10.1",
+    "graphql-date": "^1.0.3",
+    "graphql-server-koa": "^0.8.3",
+    "heredoc": "^1.3.1",
     "koa": "^2.0.0",
-    "koa-router": "^7.2.1",
+    "koa-bodyparser": "next",
+    "koa-router": "^7.2.0",
+    "koa-session": "^5.3.0",
+    "lodash": "^4.17.4",
+    "mongoose": "^4.10.6",
+    "node-sass": "^4.5.3",
     "nuxt": "~1.0.0-alpha1",
+    "promise-polyfill": "^6.0.2",
+    "pug": "^2.0.0-rc.2",
+    "qiniu": "^6.1.13",
+    "qiniu-web-uploader": "^2.1.2",
+    "ramda": "^0.24.1",
+    "random-token": "^0.0.8",
+    "raw-body": "^2.2.0",
+    "request-promise": "^4.2.1",
+    "sass-loader": "^6.0.5",
     "sha1": "^1.1.1",
-    "source-map-support": "^0.4.15"
+    "socks5-http-client": "^1.0.2",
+    "source-map-support": "^0.4.15",
+    "speakeasy": "^2.0.0",
+    "vue-awesome-swiper": "^2.5.0",
+    "wechat-pay": "^0.2.5",
+    "xml2js": "^0.4.17",
+    "xss": "^0.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
